--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.14.5"
+    "@tailwindcss/vite": "^4.1.14",
+    "aos": "^2.3.4",
+    "astro": "^5.14.5",
+    "tailwindcss": "^4.1.14"
   }
 }
