--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build site
         env:
           PUBLIC_BASE_PATH: /${{ github.event.repository.name }}/
-          PUBLIC_SITE: https://${{ github.repository_owner }}.github.io
+          PUBLIC_SITE: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}
         run: npm run build
 
       - name: Deploy to gh-pages
