--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,8 @@ jobs:
 
       - name: Build site
         env:
-          PUBLIC_BASE_PATH: /${{ github.event.repository.name }}/
-          PUBLIC_SITE: https://${{ github.repository_owner }}.github.io
+          PUBLIC_BASE_PATH: "/"
+          PUBLIC_SITE: "https://bursaries.ilmsa.co.za"
         run: npm run build
 
       - name: Upload build output
